--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
+body {
+  background-color: #caa5ca;
+  font-family: "Oswald", sans-serif;
+}
 h1 {
-  color: blue;
+  font-weight: 500;
+}
+.box {
+  background-color: white;
+  max-width: 600px;
+  margin: 100px auto;
+  padding: 30px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 15px;
 }
