--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #caa5ca;
+  background-color: #dec5fe;
   font-family: "Oswald", sans-serif;
 }
 h1 {
@@ -12,4 +12,21 @@ h1 {
   padding: 30px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 15px;
+}
+.search-form-input {
+  background-color: #e5e6fa;
+  border: none;
+  border-radius: 5px;
+  padding: 15px;
+  width: 76%;
+  font-size: 16px;
+}
+.search-form-button {
+  background-color: #e5e6fa;
+  border: none;
+  border-radius: 5px;
+  padding: 15px;
+  width: 20%;
+  font-size: 16px;
+  margin: 0 0 0 20px;
 }
