--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@ body {
 }
 h1 {
   font-weight: 500;
+
+  a {
+    color: #856799;
+  }
 }
 .box {
   background-color: white;
@@ -13,20 +17,36 @@ h1 {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 15px;
 }
+
+header {
+  border-bottom: 1px solid #e5e6fa;
+  padding: 0 0 30px;
+}
+
 .search-form-input {
-  background-color: #e5e6fa;
+  background-color: #dec5fe;
   border: none;
   border-radius: 5px;
   padding: 15px;
   width: 76%;
   font-size: 16px;
+  color: black;
 }
 .search-form-button {
-  background-color: #e5e6fa;
+  background-color: #856799;
   border: none;
   border-radius: 5px;
   padding: 15px;
   width: 20%;
   font-size: 16px;
   margin: 0 0 0 20px;
+  color: white;
+}
+
+footer {
+  border-top: 1px solid #e5e6fa;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.6);
 }
